--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "aws s3 sync ./build s3://pratice-s3-kkh-bucket001 --profile=todo-app"
   },
   "eslintConfig": {
     "extends": [
